Optimize memory usage in bootstrapper/genesis